Fixed layout issues on mobile

--- a/src/Components/PieceDisplayPage/PieceDisplay.scss
+++ b/src/Components/PieceDisplayPage/PieceDisplay.scss
@@ -114,7 +114,7 @@
         overflow-x: hidden;
     }
 
-    .modal .piece-container {
+    .piece-container {
         width: auto;
         overflow-x: hidden;
     }
